# fht-compositor

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml  compositor.toml  default.nix  flake.nix  logs
.cargo/: config.toml
.github/: FUNDING.yml  README.md
.github/workflows/: deploy.yml
docs/: book.toml  index.md  package-lock.json  package.json
docs/.helix/: config.toml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts  tabs.css
docs/configuration/: animations.md  cursor.md  decorations.md  general.md  gesturebindings.md  input.md  introduction.md  keybindings.md  layer-rules.md  mousebindings.md  outputs.md  window-rules.md
docs/developing/: code-style.md  contributing.md  issues.md
docs/getting-started/: example-nix-setup.md  guided-tour.md  important-software.md  installing.md  introduction.md
docs/src/: SUMMARY.md  cli.md  introduction.md
docs/src/configuration/: cursor.md  general.md  input.md  keybinds.md  readme.md
docs/usage/: ipc.md  layouts.md  nix.md  portals.md  workspaces.md  xwayland.md
fht-compositor/: Cargo.toml  README.md  TODO.md  stderr  stdout
fht-compositor-config/: Cargo.toml
fht-compositor-config/src/: lib.rs
fht-compositor-ipc/: Cargo.toml  test_client.rs
fht-compositor-ipc/src/: lib.rs
fht-compositor/res/: compositor.ron
fht-compositor/src/: main.rs  state.rs
fht-compositor/src/backend/: mod.rs  render.rs  udev.rs  x11.rs
fht-compositor/src/config/: mod.rs
fht-compositor/src/config/types/: animation.rs  decoration.rs  input.rs  mod.rs  rules.rs
fht-compositor/src/handlers/: buffer.rs  compositor.rs  data_control.rs  dmabuf.rs  dnd.rs  drm_lease.rs  fractional_scale.rs  idle_inhibit.rs  input_method.rs  layer_shell.rs  mod.rs  pointer_gestures.rs  relative_pointer.rs  screencopy.rs  seat.rs  selection.rs  shm.rs  xdg_activation.rs  xdg_decoration.rs  xdg_shell.rs
fht-compositor/src/input/: actions.rs  mod.rs
fht-compositor/src/ipc/: mod.rs  output.rs  workspace.rs
fht-compositor/src/portals/: mod.rs  screencast.rs
fht-compositor/src/protocols/: mod.rs  screencopy.rs
fht-compositor/src/protocols/screencopy/: mod.rs
fht-compositor/src/renderer/: custom_texture_shader_element.rs  egui.rs  extra_damage.rs  mod.rs  pixel_shader_element.rs  render_element.rs  render_elements.rs  texture_element.rs
fht-compositor/src/renderer/rounded_element/: mod.rs
fht-compositor/src/renderer/rounded_outline_shader/: mod.rs  shader.frag
fht-compositor/src/renderer/rounded_quad_shader/: mod.rs
fht-compositor/src/shell/: cursor.rs  focus_target.rs  grabs.rs  mod.rs  window.rs  workspaces.rs
fht-compositor/src/shell/decorations/: mod.rs
fht-compositor/src/shell/decorations/rounded_outline/: mod.rs  shader.frag
fht-compositor/src/shell/decorations/rounded_quad/: mod.rs  shader.frag
fht-compositor/src/shell/window/: mod.rs  surface.rs
fht-compositor/src/shell/workspaces/: layout.rs  mod.rs  tile.rs
fht-compositor/src/utils/: animation.rs  drm.rs  fps.rs  geometry.rs  mod.rs  pipewire.rs
fht-compositor/src/utils/animation/: mod.rs
fht-compositor/src/utils/animation/curve/: cubic.rs  mod.rs  spring.rs
fht-config/: Cargo.toml
fht-config/src/: lib.rs
fht-share-picker/: Cargo.toml  build.rs  default.nix
fht-share-picker/resources/: output-grid.css  resources.gresource.xml
fht-share-picker/resources/ui/: output-button.ui  selection-widget.ui  window.ui  workspace-row.ui
fht-share-picker/src/: application.rs  application_window.rs  config.rs  main.rs  output_object.rs  theme.rs  utils.rs  window_object.rs
fht-share-picker/src/selection_widget/: mod.rs  output_button.rs  window_row.rs  workspace_row.rs
fht-share-picker/src/selection_widget/output_grid/: layout.rs  mod.rs
fhtctl/: Cargo.toml
fhtctl/src/: client.rs  lib.rs  main.rs  server.rs
nix/: hm-module.nix  nixos-module.nix  packages.nix
res/: compositor.ron  compositor.toml  fht-compositor-portals.conf  fht-compositor-session  fht-compositor-shutdown.target  fht-compositor-uwsm.desktop  fht-compositor.desktop  fht-compositor.portal  fht-compositor.service
res/systemd/: fht-compositor-session  fht-compositor-shutdown.target  fht-compositor.service
smithay-egui/: Cargo.toml
smithay-egui/src/: input.rs  lib.rs
src/: cli.rs  config.rs  cursor.rs  egui.rs  focus.rs  focus_target.rs  frame_clock.rs  ipc.rs  layer.rs  main.rs  output.rs  profiling.rs  state.rs  window.rs
src/backend/: headless.rs  mod.rs  udev.rs  winit.rs  x11.rs
src/config/: mod.rs  ui.rs
src/handlers/: alpha_modifiers.rs  background_effect.rs  compositor.rs  content_type.rs  cursor_shape.rs  data_control.rs  data_device.rs  dmabuf.rs  dnd.rs  drm_lease.rs  drm_syncobj.rs  ext_workspace.rs  foreign_toplevel_list.rs  fractional_scale.rs  gamma_control.rs  hyprland_global_shortcuts.rs  idle_inhibit.rs  input_method.rs  keyboard_shortcuts_inhibit.rs  layer_shell.rs  mod.rs  output.rs  output_management.rs  pointer_constraints.rs  presentation.rs  primary_selection.rs  screencopy.rs  seat.rs  security_context.rs  session_lock.rs  single_pixel_buffer.rs  viewporter.rs  virtual_keyboard.rs  xdg_activation.rs  xdg_decoration.rs  xdg_dialog.rs  xdg_foreign.rs  xdg_shell.rs
src/input/: actions.rs  mod.rs  pick_surface_grab.rs  resize_tile_grab.rs  swap_tile_grab.rs
src/ipc/: client.rs  mod.rs  output.rs  subscribe.rs
src/lua/: mod.rs  signal.rs
src/portals/: global_shortcuts.rs  mod.rs  screencast.rs  shared.rs
src/protocols/: ext_workspace.rs  hyprland_global_shortcuts.rs  mod.rs  output_management.rs  raw.rs  screencopy.rs
src/renderer/: blur.rs  data.rs  debug.rs  egui.rs  extra_damage.rs  mod.rs  pixel_shader_element.rs  render_elements.rs  rounded_window.rs  shaders.rs  surface.rs  texture_element.rs  texture_shader_element.rs
src/shell/: cursor.rs  focus_target.rs  grabs.rs  mod.rs  window.rs
src/space/: border.rs  bsp.rs  closing_tile.rs  decorations.rs  mod.rs  monitor.rs  shadow.rs  tile.rs  tree.rs  workspace.rs
src/utils/: dbus.rs  fps.rs  geometry.rs  mod.rs  output.rs  pipewire.rs
(+56 files in other folders)
