# {{{ Workspace

[workspace]
members = ["fht-compositor-config"]
resolver = "2"

[workspace.package]
version = "0.1.1"
description = "A dynamic tiling Wayland compositor"
authors = ["Nadjib Ferhat <nferhat20@gmail.com>"]
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/nferhat/fht-compositor"

[workspace.dependencies]
anyhow = "1.0.79"
# Basic logging setup
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# Config file support

[workspace.dependencies.smithay]
git = "https://github.com/smithay/Smithay"
rev = "521344d"
default-features = false

[workspace.dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/Smithay"
rev = "521344d"

[profile.opt]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.dev]
opt-level = 3


# }}}

# {{{ fht-compositor

[package]
name = "fht-compositor"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
smithay = { workspace = true, features = [
    "desktop", "wayland_frontend",   # Provide abstractions for wayland stuff
    "renderer_glow",                 # Default renderer used everywhere
    "use_system_lib", "backend_egl", # EGL support for wayland
    "backend_libinput",              # Input handling
] }
smithay-drm-extras = { workspace = true, optional = true }
bitflags = "2.6.0"
thiserror = "1.0.61"
libc = "0.2.155"
zbus = { version = "4.3.1", optional = true }
zvariant = { version = "4.1.2", features = ["option-as-array"], optional = true }
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git", optional = true, features = ["v0_3_33"] }
xcursor = "0.3.5"
fht-compositor-config.path = "./fht-compositor-config"
glam = "0.28.0"
egui = "0.29"
egui_glow = "0.29"
fht-animation = { git = "https://github.com/nferhat/fht-animation", version = "0.1.0" }
# TODO: We use this instead of std::sync::MappedMutexGuard
# See tracking issue for nightly flag: https://github.com/rust-lang/rust/issues/117108
owning_ref = "0.4.1"
clap = { version = "4.5.18", features = ["derive", "string"] }
async-channel = "2.3.1"
async-io = "2.3.4"
puffin = { version = "0.19.1", optional = true }
puffin_http = { version = "0.16.1", optional = true }
clap_complete = "4.5.38"

[features]
default = ["winit-backend", "udev-backend", "all-portals"]

# Marker feature to enable D-Bus connectivity.
# 
# You should not enable this yourself, this is meant to be used by compositor
# feature dependencies.
dbus = ["zbus", "zvariant"]

# Enable the winit backend.
# 
# This allows the compositor to run under a winit window.
# 
# NOTE: Although this backend works, it's not explicity supported, since its only here for 
# developement. For all regular usage, please use the udev backend.
winit-backend = [
    "smithay/backend_winit",
    "smithay/renderer_glow",
    "smithay/backend_drm",
]

# Enable the winit backend.
# 
# This allows the compositor to run under a libseat session.
udev-backend = [
    "smithay-drm-extras",
    "smithay/backend_libinput",
    "smithay/backend_udev",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_vulkan",
    "smithay/backend_egl",
    "smithay/backend_session_libseat",
    "smithay/renderer_multi",
]

# Enable profiling with puffin
# 
# You should **NOT** enable this unless you want to profile compositor performance.
# This will automatically stream compositor data to localhost:DEFAULT_PORT.
profile-with-puffin = ["dep:puffin", "dep:puffin_http"]

# Marker feature to enable all supported portals.
all-portals = ["xdg-screencast-portal"]

# Enable xdg-screencast portal support
xdg-screencast-portal = ["pipewire", "dbus"]

# }}}

# vim: foldmethod=marker
