[package]
name = "fht-compositor-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csscolorparser = { version = "0.7.0", features = ["serde"] }
fht-animation = { git = "https://github.com/nferhat/fht-animation", version = "0.1.0", features = ["serde"] }
regex = "1.10.6"
serde = { version = "1.0.203", features = ["derive"] }
smithay = { workspace = true, features = ["backend_libinput"] }
sscanf = "0.4.2"
thiserror = "2.0.12"
toml = { version = "0.9.4", default-features = false, features = ["parse", "serde"] }
tracing.workspace = true
xdg = "3.0.0"
