[package]
name = "fht-compositor-ipc"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
smithay.workspace = true

[[bin]]
name = "test_client"
path = "test_client.rs"
