[package]
name = "fht-compositor-ipc"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
smithay.workspace = true

[features]
clap = []

[[bin]]
name = "test_client"
path = "test_client.rs"
