[package]
name = "fht-compositor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
indexmap = { version = "2.1.0", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xcursor = "0.3.3"
x11rb = { version = "0.12.0", optional = true, default-features = false, features = ["composite"] }
serde.workspace = true
xdg = "2.5.2"
color-eyre = "0.6.2"
ron = "0.8.1"
colors-transform = "0.2.11"
smithay = { workspace = true, features = ["desktop", "wayland_frontend", "backend_libinput"] }
smithay-drm-extras = { workspace = true, optional = true }
smithay-egui.path = "../smithay-egui/" # Track smithay-egui in this repo in order to avoid version mismatch madness
bitflags = "2.4.2"
thiserror = "1.0.56"
libc = "0.2.153"
wayland-backend = "0.3.2"
wayland-scanner = "0.31.0"
tracing-appender = "0.2.3"
profiling = "1.0.14"
puffin_http = { version = "0.16.0", optional = true }
keyframe = { version = "1.1.1", default-features = false }
zbus.workspace = true
zvariant.workspace = true
uuid = { version = "1.7.0", features = ["v4"] }
pipewire = { version = "0.8.0", optional = true }
async-std = { version = "1.12.0", features = ["unstable"] }

[features]
default = ["egl", "x11_backend", "udev_backend", "all-portals"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
x11_backend = ["smithay/backend_x11", "x11rb", "smithay/renderer_glow", "smithay/backend_vulkan"]
udev_backend = [
    "smithay-drm-extras",
    "smithay/backend_libinput",
    "smithay/backend_udev",
    "smithay/backend_drm",
    "smithay/backend_gbm",
    "smithay/backend_vulkan",
    "smithay/backend_egl",
    "smithay/backend_session_libseat",
    "smithay/renderer_multi",
]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy"]
all-portals = ["xdg-screencast-portal"]
xdg-screencast-portal = ["pipewire"]
