[package]
name = "fht-share-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
zbus.workspace = true
zvariant.workspace = true

[dependencies.iced]
workspace = true
features = ["svg", "advanced"]
