[package]
name = "fht-share-picker"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"] }
fht-compositor-ipc = { version = "25.3.1", path = "../fht-compositor-ipc" }
glib = { version = "0.20.7", features = ["log"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_16"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
glib-build-tools = "0.21.0"
