[package]
name = "fht-share-picker"
version = "25.10.0"
authors = ["Nadjib Ferhat <nadjib.ferhat@etu.usthb.dz>"]
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/nferhat/fht-share-picker"

[profile.release]
lto = true

[dependencies]
adw = { version = "0.8", package = "libadwaita", features = ["v1_6"] }
fht-compositor-ipc = { git = "https://github.com/nferhat/fht-compositor", version = "25.10.0" }
glib = { version = "0.21", features = ["log"] }
gtk = { version = "0.10", package = "gtk4", features = ["v4_16"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tracing = "0.1.37"
tracing-subscriber = "0.3"

[build-dependencies]
glib-build-tools = "0.20.0"
