[package]
name = "fhtctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "1.0.56"
tracing = "0.1.40"
async-io = "2.3.4"
async-channel = "2.3.1"
clap = { version = "4.5.18", features = ["derive"] }
