[package]
name = "fhtctl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
async-io = "2.4.0"
async-channel = "2.3.1"
clap = { version = "4.5.32", features = ["derive"] }
