[package]
name = "smithay-egui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cgmath = "0.18"
egui = "0.23"
egui_glow = "0.23"
egui_extras = "0.23"
img = { version = "0.24", default-features = false, optional = true, package = "image" }
memoffset = "0.9"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4"
xkbcommon = "0.7"

[dependencies.smithay]
workspace = true
features = ["renderer_glow", "wayland_frontend"]

[features]
default = ["default_fonts", "desktop_integration"]
# Let egui bundle some fonts by default.
default_fonts = ["egui/default_fonts"]
desktop_integration = ["smithay/desktop"]
image = ["img"]
svg = ["image"]
png = ["image", "img/png"]
jpg = ["image", "img/jpeg"]

[dev-dependencies]
anyhow = "1.0"
egui_demo_lib = "0.23"
tracing-subscriber = "0.3"

[dev-dependencies.smithay]
workspace = true
features = ["backend_winit"]
